<?xml version="1.0" encoding="utf-8"?><!--
  - Copyright 2013 Google Inc.
  -
  - Licensed under the Apache License, Version 2.0 (the "License"); you may not
  - use this file except in compliance with the License. You may obtain a copy
  - of the License at
  -
  - http://www.apache.org/licenses/LICENSE-2.0
  -
  - Unless required by applicable law or agreed to in writing, software
  - distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  - WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  - License for the specific language governing permissions and limitations
  - under the License.
-->
<resources>

    <string name="app_name">Push Client</string>
    <string name="pref_file">pushclient</string>
    <string name="server_url">Server URL</string>
    <string name="push_act">Activity</string>
    <string name="notif_act">Action</string>
    <string name="launch_act">Launch the activity when a puch notification received</string>
    <string name="send_notif">Notify when a push notification received</string>
    <string name="screen_on">Turn the screen on when a push notification received</string>
    <string name="end_off">Turn the screen off after the activity ended</string>
    <string name="set">Set</string>
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>
    <string name="clear">Clear</string>
    <string name="msg_set">Set parameters.</string>
    <string name="msg_no_activity">The activity does not exist.</string>
    <string name="msg_received">Received: %1$s &lt;%2$s&gt;</string>
    <string name="msg_deleted">Deleted messages on the server.</string>

</resources>
