<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_url" />

    <EditText
        android:id="@+id/server_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="http://server.com/reg.php"
        android:inputType="textUri"
        android:scrollHorizontally="true"
        android:singleLine="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/importance" />

        <Spinner
            android:id="@+id/importance"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/importance" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <CheckBox
        android:id="@+id/flag1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_app" />

    <CheckBox
        android:id="@+id/flag2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_on" />

    <CheckBox
        android:id="@+id/flag3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_off" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/set" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/register" />

        <Button
            android:id="@+id/unregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/unregister" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/clear" />

    </LinearLayout>

    <TextView
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/message" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="24dp"
        android:background="?android:attr/textColorSecondary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registration token:"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:textIsSelectable="true" />

</LinearLayout>
